[FIX] Fixed a bug causing selected mons not showing shiny

--- a/front/src/components/MyMons/PokeCard.css
+++ b/front/src/components/MyMons/PokeCard.css
@@ -1,77 +1,139 @@
 .monCont {
-    display: flex;
+  display: flex;
 }
 
 .shinyLogoON {
-    max-width: 50px;
-    border-radius: 10px;
-    border-color: aqua;
+  max-width: 50px;
+  border-radius: 10px;
+  border-color: aqua;
 }
 
 .shinyLogoOFF {
-    max-width: 50px;
-    filter: grayscale(100%);
-    border-radius: 10px;
-    border-color: aqua;
+  max-width: 50px;
+  filter: grayscale(100%);
+  border-radius: 10px;
+  border-color: aqua;
 }
 
 .pokeCard {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background: lightblue;
-    width: fit-content;
-    border: solid 1px #6871f5; 
-    border-radius: 10px;
-    width: 10vw;
-    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background: lightblue;
+  width: fit-content;
+  border: solid 1px #6871f5;
+  border-radius: 10px;
+  width: 10vw;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .selectedPokeCardCont {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    background: lightblue;
-    border-radius: 10px;
-    width: 100%;
-    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  background: lightblue;
+  border-radius: 10px;
+  width: 100%;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .selectedPokeCard {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background: lightgreen;
-    width: fit-content;
-    border: solid 1px #68f5ae; 
-    border-radius: 10px;
-    width: 10vw;
-    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+  display: flex;
+  align-items: center;
+  margin: auto;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background: lightgreen;
+  width: fit-content;
+  border: solid 1px #68f5ae;
+  border-radius: 10px;
+  width: 10vw;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.selectedPoke {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background: lightblue;
+  width: fit-content;
+  border: solid 1px #6871f5;
+  border-radius: 10px;
+  width: 32.5%;
+  height: 83vh;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.fakeSelectedPoke {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: fit-content;
+  border-radius: 10px;
+  width: 32.5%;
+  height: 83vh;
 }
 
 .bsList {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding-left: 5px;
-    padding-right: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .bs {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    height: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  height: fit-content;
+}
+
+.myMonsButtonContainer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.styledMyMonsButton {
+  background-color: initial;
+  background-image: linear-gradient(-180deg, #ff7e31, #e62c03);
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter, -apple-system, system-ui, Roboto, "Helvetica Neue", Arial,
+    sans-serif;
+  height: 40px;
+  line-height: 40px;
+  outline: 0;
+  overflow: hidden;
+  padding: 0 20px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: top;
+  white-space: nowrap;
+  width: 20%;
+  z-index: 9;
+  border: 0;
+  transition: box-shadow 0.2s;
+}
+
+.styledMyMonsButton:hover {
+  box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
 }
 
 p {
-    margin: 3px;
+  margin: 3px;
 }
