--- a/front/src/components/index.css
+++ b/front/src/components/index.css
@@ -27,30 +27,6 @@ li {
   overflow-y: hidden;
 }
 
-.selectedPoke {
-  display: flex;
-  position: fixed;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background: lightblue;
-  width: fit-content;
-  border: solid 1px #6871f5;
-  border-radius: 10px;
-  width: 32.5%;
-  height: 85vh;
-  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.fakeSelectedPoke {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: fit-content;
-  border-radius: 10px;
-  width: 32.5%;
-  height: 85vh;
-}
-
 .pokeList {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
